# greenhouse-node

./: .gitignore  .gitmodules  LICENSE  README.md
src/node/: CMakeLists.txt
src/node/components/node_console/: CMakeLists.txt  cmd_sensors.c  cmd_sensors.h  cmd_sys.c  cmd_sys.h  cmd_wifi.c  node_console.c
src/node/components/node_console/include/: node_console.h
src/node/components/node_mqtt/: CMakeLists.txt  node_mqtt.c
src/node/components/node_mqtt/include/: node_mqtt.h
src/node/components/node_network/: CMakeLists.txt  node_mqtt.h  node_network.c  node_wifi.c
src/node/components/node_network/include/: node_network.h  node_wifi.h
src/node/components/node_sensors/: CMakeLists.txt  node_1wire.c  node_1wire.h  node_adc.c  node_adc.h  node_sensors.c  node_sensors_private.h
src/node/components/node_sensors/include/: node_sensors.h
src/node/components/node_status/: CMakeLists.txt  node_status.c
src/node/components/node_status/include/: node_status.h
src/node/components/node_wifi/: CMakeLists.txt  node_wifi.c
src/node/components/node_wifi/include/: node_wifi.h
src/node/main/: CMakeLists.txt  cmd_sys.c  console.c  main.c  onewire.c  onewire.h
